<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">LearningLog</string>
	<string name="quiz_Activity_name">Quiz</string>
	<string name="login_notification">Log in</string>
	<string name="menu_title">menu</string>
	<string name="myItem_title">My Learning Log</string>
	<string name="my_objects_title">My Learning Log</string>
	<string name="latest_objects_title">Latest Learning Log</string>
	<string name="add_object_title">Add Learning Log Object</string>
	<string name="error">error</string>
	<string name="error_inner_info">There is an inner error.</string>
	<string name="error_invali_username_password">Username or password is empty</string>
	<string name="error_username_password">Username or password is not right</string>
	<string name="error_setting">Please set your category, mother language, study
		language in learning log system.</string>
	<string name="error_no_category">Please set your category in learning log system.</string>
	<string name="error_unable_access_server">Server can not be accessed. Please reset your
		system address</string>
	<string name="server_exception_occurred">Errors are occurred on the sever side</string>
	<string name="quiz_answer_correct">Congratulations! Your answer is right!</string>
	<string name="quiz_answer_wrong">Sorry! Your answer is not right! </string>
	<string name="error_no_quiz">You have finished all the quizzes!</string>
	<string name="copyright">Objects provided by LL System are under the
		copyright of their owners.</string>
	<string name="author">Author Name:</string>
	<string name="map">Map:</string>
	<string name="showinmap">Go to map</string>
	<string name="lbl_item_comment">Description:</string>
	<string name="LLQStateText">Take notes</string>
	<string name="NavNotificationInfo">There are some LL objects around you!</string>
<string name="navbutton">NAVIGATOR:data取得</string>
	<string name="preference_title">Setting</string>
	<string name="preference_system_setting">Learning Log Setting</string>
	<string name="preference_background_time">Time based Recommendation</string>
	<string name="preference_background_time_detail">System will recommend you some learning logs based
		on current time.</string>
	<string name="preference_background_location">Location based Recommendation</string>
	<string name="preference_background_location_detail">System will recommend you some learning logs based
		on your location.</string>
	<string name="preference_auto_startup">Auto Start up</string>
	<string name="user_id">User ID</string>
	<string name="password">Password</string>
	<string name="submit">Submit</string>
	<string name="done">Done</string>
	<string name="cancel">Cancel</string>
	<string name="title">Title</string>
	<string name="entitle">English Title</string>
	<string name="jptitle">Japanese Title</string>
	<string name="zhtitle">Chinese Title</string>
	<string name="item_title_intranslate">Translating...</string>
	<string name="menu_qa">Q &amp; A</string>
	<string name="hint_title">Title</string>
	<string name="item_category_label">Category</string>
	<string name="item_share_label">Share Level</string>
	<string name="item_photo_label">Select Photo</string>
	<string name="item_save_label">save</string>
	<string name="item_detail_label">detail</string>
	<string name="notification_upload_ticker">Uploading Images ...</string>
	<string name="notification_upload_title">PicUpload</string>
	<string name="notification_upload_message">Uploading Images ...</string>
	<string name="toast_upload_start">Start Uploading</string>
	<string name="toast_upload_success">PicUpload: Upload Success</string>
	<string name="toast_upload_nouser">PicUpload: username is not correct</string>
	<string name="error_dialog_title">PicUpload: error</string>
	<string name="error_post_fail">Failed to Post</string>
	<string name="error_validate">ID or Password is not set</string>
	<string name="lab_LLMap">Learning Log Map</string>
	<string name="test">PasswordUsername</string>
	<string name="add_item_title">Title</string>
	<string name="add_item_comment">Description</string>
	<string name="add_item_attached">Attachment</string>
	<string name="add_item_notebook">NoteBook</string>
	<string name="add_item_tag">Tag</string>
	<string name="add_item_tags">Select Tag</string>
	<string name="add_item_question">Question</string>
	<string name="add_item_question_lang">Question Language</string>
	<string name="info_require_gps">Your GPS seems to be disabled, do you want to
		enable it?</string>
	<string name="hint_question_content">Question</string>
	<string name="hint_question_title">Title</string>
	<string name="nav_app_name">Learning-Log Navigator</string>
	<string name="Fast_Timer_Photo">1 Minute</string>
	<string name="Short_Timer_Photo">5 Minutes</string>
	<string name="Late_Timer_Photo">10 Minutes</string>
	<string name="voice_record_prefix_start">Recording</string>
	<string name="voice_record_prefix_stop">Stop</string>
	<string name="info_select_category">Select a category</string>
	<string name="info_txt_no_sd_card">No SD card is found</string>
	<string name="info_audio_resource_is_using">Audio devices are used by other program</string>
	<string name="oauth_pin_not_match">入力された数値を確認してください</string>
	<string name="button_oauth_ok">認証</string>
	<string name="description_category">Category</string>
	<string name="description_category_tag">Category\uff06Tag</string>
	<string name="description_camera">Camera</string>
	<string name="description_mic">Microphone</string>
	<string name="description_setting">Setting</string>
	<string name="description_attach">Attachment</string>
	<string name="title_now_playing">Now Playing</string>
	<string name="title_schedule">Schedule</string>
	<string name="title_sessions">Sessions</string>
	<string name="title_starred">Starred</string>
	<string name="title_tracks">Tracks</string>
	<string name="title_vendors">Sandbox</string>
	<string name="title_map">Map</string>
	<string name="title_notes">Notes</string>
	<string name="title_note_edit">Edit note</string>
	<string name="title_session_tracks">Session tracks</string>
	<string name="title_vendor_tracks">Sandbox tracks</string>
	<string name="title_share">Share using</string>
	<string name="title_search">Search</string>
	<string name="title_search_query">
		Search for \'
		<xliff:g id="query">%1$s</xliff:g>
		\'
	</string>
	<string name="btn_schedule">Schedule</string>
	<string name="btn_map">Map</string>
	<string name="btn_sessions">Sessions</string>
	<string name="btn_starred">Starred</string>
	<string name="btn_vendors">Sandbox</string>
	<string name="btn_notes">My Notes</string>
	<string name="toast_sync_error">
		Sync error:
		<xliff:g id="error">%1$s</xliff:g>
	</string>
	<string name="session_subtitle">
		<xliff:g id="time">%1$s</xliff:g>
		in
		<xliff:g id="room">%2$s</xliff:g>
	</string>
	<string name="session_moderator_status">
		<xliff:g id="questions">%1$s</xliff:g>
		questions submitted and
		<xliff:g id="votes">%2$s</xliff:g>
		votes cast.
	</string>
	<string name="session_summary">Summary</string>
	<string name="session_notes">Notes</string>
	<string name="session_moderator">Moderator</string>
	<string name="session_interact">Interact</string>
	<string name="session_requirements">Requirements</string>
	<string name="session_speakers">Speakers</string>
	<string name="track_summary">Summary</string>
	<string name="track_sessions">Sessions</string>
	<string name="track_vendors">Sandbox</string>
	<string name="search_sessions">Sessions</string>
	<string name="search_vendors">Sandbox</string>
	<string name="starred_sessions">Sessions</string>
	<string name="starred_vendors">Sandbox</string>
	<string name="search_hint">Session keywords</string>
	<string name="share_template">
		Checking out \'
		<xliff:g id="title">%1$s</xliff:g>
		\' at Google #io2010
		<xliff:g id="hashtag">%2$s</xliff:g>
	</string>
	<string name="share_notes">Exported notes from Google I/O 2010</string>
	<string name="moderator_header">Moderator</string>
	<string name="moderator_summary">Use Moderator to ask questions during this session,
		and vote up/down other questions.</string>
	<string name="wave_header">Wave</string>
	<string name="wave_summary">Use Wave to collaborate in real-time with others
		during this session.</string>
	<string name="dialog_moderator_title">Google Moderator</string>
	<string name="dialog_moderator_message">The official Google Moderator app is available in
		Market, would you like to install it or continue using a normal
		browser?</string>
	<string name="dialog_moderator_web">Use Browser</string>
	<string name="dialog_moderator_market">Visit Market</string>
	<string name="dialog_wave_title">Google Wave</string>
	<string name="dialog_wave_message">The Google Wave mobile interface is still in beta,
		and using a desktop or laptop is recommended for the best
		experience.\n\nContinue to Google Wave anyway?</string>
	<string name="speaker_template">
		<xliff:g id="name">%1$s</xliff:g>
		,
		<xliff:g id="company">%2$s</xliff:g>
	</string>
	<string name="note_create">Create new note</string>
	<string name="note_hint">Enter note</string>
	<string name="note_discard_title">Discard note?</string>
	<string name="note_discard_confirm">Are you sure you want to discard this note,
		deleting any contents?</string>
	<string name="txt_register">
		<a href="http://ll.is.tokushima-u.ac.jp/learninglog/signup/sendmail">Create your account</a>
	</string>
	<string name="txt_forget">
		<a href="http://ll.is.tokushima-u.ac.jp/learninglog/signup/resetpassword">Forgot password</a>
	</string>
	<string name="forget_password_url">
		<a href="http://ll.is.tokushima-u.ac.jp/learninglog/signup/resetpassword">Forgot password</a>
	</string>
	<string name="txt_help">
		<a href="http://ll.is.tokushima-u.ac.jp/learninglog/help">Help</a>
	</string>
	<string name="txt_system">
		<a href="http://ll.is.tokushima-u.ac.jp">Learning Log</a>
	</string>
	<string name="map_key">0oBuwKtIY8l-mIIatpsFZMGSBW_3gupvfFC1NpQ</string>
	<string name="info_select_language">Language</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>
	<string name="alert_dialog_reset">Reset</string>
	<string name="description_home">Home</string>
	<string name="description_search">Search</string>
	<string name="description_map">Map</string>
	<string name="description_refresh">Refresh</string>
	<string name="description_share">Share</string>
	<string name="description_edit">Edit</string>
	<string name="description_delete">Delete</string>
	<string name="description_compass">Navigator</string>
	<string name="description_question">Question</string>
	<string name="progress_bar_title">Waiting...</string>
	<string name="progress_bar_message">Loading...</string>
	<string name="dialog_attach_option_title">Attachment</string>
	<string name="dialog_attach_option_btn_delete">Delete</string>
	<string name="dialog_attach_option_btn_view">View</string>
	<string name="dialog_attach_option_btn_back">Back</string>
	<string name="log_edit_comment">Description</string>
	<string name="log_place_comment">Place</string>
	<string name="log_edit_btn_save">Save</string>
	<string name="log_edit_btn_discard">Discard</string>
	<string name="info_titles_empty">Please input at least one title</string>
	<string name="info_upload_failure">Upload Failure</string>
	<string name="info_upload_success">Upload Success</string>
	<string name="log_edit_question">Question</string>
	<string name="info_empty_quiz">The system is synchronizing. Please wait for a moment.</string>
	<string name="quiz_answer_label">Answer</string>
	<string name="quiz_more_label">More Quizzes</string>
	<string name="quiz_pass_label">No Good</string>
	<string name="quiz_too_easy_label">Too Easy</string>
	<string name="quiz_too_difficult_label">Too Difficult</string>
	<string name="info_empty_logs">No Logs</string>
	<string name="info_searching_logs">Searching</string>
	<string name="info_loading_logs">Loading</string>
</resources>