<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
		<LinearLayout style="@style/TitleBar">
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_home" android:src="@drawable/ic_title_home"
				android:onClick="onHomeClick" />
			<ImageView style="@style/TitleBarSeparator" />
			<TextView style="@style/TitleBarText" />
			<ImageView style="@style/TitleBarSeparator" />
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_category"
				android:src="@drawable/ic_title_category" android:onClick="onCatTagClick" />

			<ImageView style="@style/TitleBarSeparator" />
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_setting"
				android:src="@drawable/ic_title_setting" android:onClick="onSettingClick" />

			<ImageView style="@style/TitleBarSeparator" />
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_attach" android:src="@drawable/ic_title_attach"
				android:onClick="onAttachClick" />
			<!-- <ImageView style="@style/TitleBarSeparator" /> <ImageButton style="@style/TitleBarAction" 
				android:contentDescription="@string/description_camera" android:src="@drawable/ic_title_camera" 
				android:onClick="onCameraClick" /> <ImageView style="@style/TitleBarSeparator" 
				/> <ImageButton style="@style/TitleBarAction" android:contentDescription="@string/description_mic" 
				android:src="@drawable/ic_title_mic" android:onClick="onMicClick" /> -->
		</LinearLayout>

		<LinearLayout android:id="@+id/log_title_block"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical">
		</LinearLayout>

		<LinearLayout android:id="@+id/log_title_block"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical">
			<EditText android:id="@+id/log_question_note"
				android:layout_width="fill_parent" android:layout_height="0dip"
				android:layout_weight="1" android:layout_margin="5dip"
				android:hint="@string/log_edit_question" android:freezesText="true"
				android:gravity="top">
			</EditText>
		</LinearLayout>

		<LinearLayout android:id="@+id/log_attach_blcok"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_margin="5dip"
			android:layout_gravity="center">
			<ImageView android:id="@+id/log_attach"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:visibility="gone" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@android:style/ButtonBar">
			<Button android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_weight="1" android:onClick="onSaveClick"
				android:text="@string/log_edit_btn_save" />
			<Button android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_weight="1" android:onClick="onDiscardClick"
				android:text="@string/log_edit_btn_discard" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
