<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />

		<ImageView style="@style/TitleBarSeparator" />
        <ImageButton android:id="@+id/title_compass" style="@style/TitleBarAction"
            android:contentDescription="@string/description_compass"
            android:src="@drawable/ic_title_compass"
            android:onClick="onNavigateClick" android:visibility="gone"/>

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />
    </LinearLayout>

    <include layout="@layout/activity_log_list_content" />

</LinearLayout>
