<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:gravity="center">
		<ListView android:id="@android:id/list" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1" />
		<LinearLayout android:id="@+android:id/progress_logs_load_more"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center" android:visibility="gone">
			<ProgressBar style="?android:attr/progressBarStyle"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_margin="5dip" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/info_loading_logs"
				android:layout_margin="5dip" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+android:id/progress_logs_loading"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal" android:gravity="center">
		<ProgressBar style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="5dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/info_searching_logs"
			android:layout_margin="5dip" />
	</LinearLayout>
	<TextView android:id="@+android:id/logs_empty"
		android:visibility="gone" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:text="@string/info_empty_logs"
		android:gravity="center" />
</FrameLayout>
