<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<TextView android:id="@+id/category_label"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/item_category_label" android:layout_weight="1"
		android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
		android:layout_marginTop="5dip" android:gravity="left" android:textColor="@color/white"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<Spinner android:id="@+id/spn_category" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:drawSelectorOnTop="true"
		android:prompt="@string/info_select_category"
		android:layout_marginTop="5dip" android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip" android:gravity="center"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/add_item_tag"
		android:layout_weight="1" android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip" android:gravity="left"
		android:layout_marginTop="5dip" android:textColor="@color/white"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<EditText android:id="@+id/log_tag_edit"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
		android:scrollHorizontally="true" android:autoText="false"
		android:layout_marginTop="5dip" android:capitalize="none"
		android:gravity="fill_horizontal" android:maxLines="3"
		android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>
